openSAFETY: Fixing rare crash as well as dissector errors
This issue was migrated from bug 9314 in our old bug tracker.
Original bug information:
Reporter: Roland Knall
Status: RESOLVED FIXED
Product: Wireshark
Component: Dissection engine (libwireshark)
OS: All
Platform: x86
Version: 1.11.x (Experimental)
Attachments:
wireshark_opensafety_v2.15.patch: openSAFETY: Fixing rare crash as well as dissector errors
opensafety_24_modules.pcapng: openSAFETY: Trace with 24 safety modules, including boot-up phase
wireshark.1.10_opensafety_2.15.patch: openSAFETY: Fixing rare crash as well as dissector errors for 1.10