openSAFETY: Fixing rare crash as well as dissector errors.  Bug 9314 (https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=9314)

From Roland Knall

svn path=/trunk/; revision=52752